--- a/front/public/index.html
+++ b/front/public/index.html
@@ -8,6 +8,6 @@
     <title>BoTakMam</title>
   </head>
   <body>
-    <p>Jest to zbuildowana wersja Naszej strony</p>
+    <div id="app"></div>
   </body>
 </html>
